--- a/web/hicon/promo/templates/promo/promo.html
+++ b/web/hicon/promo/templates/promo/promo.html
@@ -1,1 +1,7 @@
 {% extends 'layout.html' %}
+{% block content %}
+  <section class="promo">
+    <h1 class="promo__header"></h1>
+    <h2 class="promo_subheader"></h2>
+  </section>
+{% endblock %}
