--- a/web/hicon/static/scss/base/_variables.scss
+++ b/web/hicon/static/scss/base/_variables.scss
@@ -1,5 +1,6 @@
 $main-back: #D6C3F1;
 $second-back: #FF9A90;
 $second-back-hover: #D36E64;
-$main-text: #3129D8;
-$second-text: #222;
+$section-back:#F8E5FF;
+$main-text: #222;
+$second-text: #3129D8;
