--- a/web/hicon/static/css/style.css
+++ b/web/hicon/static/css/style.css
@@ -83,6 +83,100 @@
   }
 }
 
+@-webkit-keyframes down {
+  0% {
+    -webkit-transform: rotate(180deg) translateY(0px);
+            transform: rotate(180deg) translateY(0px);
+  }
+  50% {
+    -webkit-transform: rotate(180deg) translateY(-10px);
+            transform: rotate(180deg) translateY(-10px);
+  }
+  100% {
+    -webkit-transform: rotate(180deg) translateY(0px);
+            transform: rotate(180deg) translateY(0px);
+  }
+}
+
+@keyframes down {
+  0% {
+    -webkit-transform: rotate(180deg) translateY(0px);
+            transform: rotate(180deg) translateY(0px);
+  }
+  50% {
+    -webkit-transform: rotate(180deg) translateY(-10px);
+            transform: rotate(180deg) translateY(-10px);
+  }
+  100% {
+    -webkit-transform: rotate(180deg) translateY(0px);
+            transform: rotate(180deg) translateY(0px);
+  }
+}
+
+@-webkit-keyframes rise {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes rise {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes time {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes time {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+* {
+  color: #222;
+}
+
 .btn {
   cursor: pointer;
   width: 135px;
@@ -95,7 +189,27 @@
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   font-size: 28px;
-  line-height: 45px;
+  line-height: 48px;
+  outline: none;
+  border: none;
+}
+
+.btn_big {
+  width: 320px;
+  height: 70px;
+  text-transform: uppercase;
+  font-family: Philosopher;
+  font-size: 28px;
+}
+
+.btn_big img {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.btn_big:hover img {
+  -webkit-animation: down 1s linear infinite;
+          animation: down 1s linear infinite;
 }
 
 .btn:hover {
@@ -136,5 +250,95 @@
   color: #3129D8;
   font-size: 28px;
   line-height: 28px;
+}
+
+.promo {
+  padding: 30px 0;
+  font-family: Comfortaa;
+  font-weight: 400;
+  background-color: #F8E5FF;
+  border-bottom: 2px solid #948BD8;
+}
+
+.promo__header {
+  font-weight: 700;
+  font-size: 64px;
+  color: #3129D8;
+}
+
+.promo__subheader {
+  font-size: 32px;
+  margin-bottom: 45px;
+}
+
+.promo__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 40px;
+}
+
+.promo__item {
+  width: 220px;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #222;
+  border-radius: 10px;
+}
+
+.promo__item:nth-child(1):hover img, .promo__item:nth-child(3):hover img {
+  -webkit-animation: rise 1s linear;
+          animation: rise 1s linear;
+}
+
+.promo__item:nth-child(2):hover img {
+  -webkit-animation: time 3s linear;
+          animation: time 3s linear;
+}
+
+.promo__item:nth-child(4):hover img {
+  -webkit-animation: up 1s linear;
+          animation: up 1s linear;
+}
+
+.promo__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 15px;
+}
+
+.promo__icon img {
+  width: 100px;
+  height: 100px;
+}
+
+.promo__text {
+  width: 100%;
+  text-align: center;
+  font-family: Philosopher;
+  font-size: 20px;
+  line-height: 20px;
 }
 /*# sourceMappingURL=style.css.map */
