--- a/web/hicon/static/css/style.css
+++ b/web/hicon/static/css/style.css
@@ -175,9 +175,11 @@
 
 * {
   color: #222;
+  font-family: Comfortaa;
 }
 
 .btn {
+  display: block;
   cursor: pointer;
   width: 135px;
   height: 45px;
@@ -188,18 +190,22 @@
   text-decoration: none;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  font-size: 28px;
+  font-size: 24px;
+  font-weight: 700;
   line-height: 48px;
   outline: none;
   border: none;
 }
 
 .btn_big {
+  margin: 0 auto;
   width: 320px;
   height: 70px;
-  text-transform: uppercase;
   font-family: Philosopher;
   font-size: 28px;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 72px;
 }
 
 .btn_big img {
@@ -218,9 +224,19 @@
           box-shadow: 0 0 10px 3px #D36E64;
 }
 
+.title {
+  margin-bottom: 30px;
+  font-family: Comfortaa;
+  font-size: 48px;
+  line-height: 54px;
+  text-align: center;
+  color: #3129D8;
+}
+
 .header {
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
   height: 65px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -233,8 +249,6 @@
           justify-content: space-between;
   padding: 0 10px;
   background-color: #D6C3F1;
-  font-family: 'Comfortaa';
-  font-weight: 400;
 }
 
 .header__up {
@@ -253,9 +267,9 @@
 }
 
 .promo {
+  position: relative;
+  top: 65px;
   padding: 30px 0;
-  font-family: Comfortaa;
-  font-weight: 400;
   background-color: #F8E5FF;
   border-bottom: 2px solid #948BD8;
 }
@@ -264,27 +278,23 @@
   font-weight: 700;
   font-size: 64px;
   color: #3129D8;
+  text-align: center;
 }
 
 .promo__subheader {
   font-size: 32px;
+  font-weight: 300;
   margin-bottom: 45px;
+  text-align: center;
 }
 
 .promo__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin: 0 auto;
   margin-bottom: 40px;
 }
 
 .promo__item {
+  margin: 0 auto;
   width: 220px;
   padding: 10px;
   display: -webkit-box;
@@ -335,10 +345,166 @@
 }
 
 .promo__text {
-  width: 100%;
+  width: 125px;
   text-align: center;
   font-family: Philosopher;
   font-size: 20px;
   line-height: 20px;
+}
+
+.about {
+  position: relative;
+  top: 65px;
+  padding: 80px 0 40px 0;
+  border-bottom: 2px solid #948BD8;
+}
+
+.about__text span {
+  font-family: Philosopher;
+  font-size: 28px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.about__list {
+  margin-bottom: 0;
+  padding-left: 0;
+  margin-top: 20px;
+  line-height: 30px;
+  list-style-type: none;
+}
+
+.about__list li {
+  position: relative;
+  margin-bottom: 18px;
+  font-family: Philosopher;
+  font-weight: 400;
+  font-size: 28px;
+  color: #3129D8;
+}
+
+.about__list li::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: -18px;
+  width: 15px;
+  height: 15px;
+  background: url("../icons/li.svg") center center/cover no-repeat;
+}
+
+.about__img {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 20px;
+}
+
+.about__img img {
+  width: 100%;
+}
+
+.function {
+  position: relative;
+  top: 65px;
+  padding: 30px 0;
+}
+
+.function .swiper-container {
+  margin: 0 auto;
+  width: 100%;
+  height: 500px;
+}
+
+.function .swiper-pagination {
+  display: none;
+}
+
+.function .swiper-pagination-bullet-active {
+  background: #FF9A90;
+}
+
+.function .swiper-button-next, .function .swiper-button-prev {
+  width: 40px;
+  height: 46px;
+}
+
+@media (max-width: 1200px) {
+  .promo__header {
+    font-size: 48px;
+  }
+  .promo__subheader {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 991px) {
+  .promo__item {
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .title {
+    margin-bottom: 18px;
+  }
+  .promo__subheader {
+    margin-bottom: 30px;
+  }
+  .about {
+    padding: 40px 0 10px 0;
+  }
+  .function .swiper-pagination {
+    display: block;
+  }
+  .function .swiper-button-next, .function .swiper-button-prev {
+    display: none;
+  }
+  .function .swiper-container {
+    height: 320px;
+  }
+}
+
+@media (max-width: 575px) {
+  .btn_big {
+    width: 280px;
+  }
+  .btn_big:hover img {
+    -webkit-animation: none;
+            animation: none;
+  }
+  .btn:hover {
+    color: #222;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .title {
+    font-size: 28px;
+    line-height: 31px;
+  }
+  .promo .promo__wrapper {
+    margin-bottom: 25px;
+  }
+  .about__text span {
+    font-size: 18px;
+  }
+  .about__list {
+    margin-top: 10px;
+    padding: 0 20px;
+  }
+  .about__list li {
+    font-size: 18px;
+  }
+  .about__list li::before {
+    width: 10px;
+    height: 10px;
+    left: -13px;
+    top: 10px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
