--- a/web/hicon/static/scss/blocks/_button.scss
+++ b/web/hicon/static/scss/blocks/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  display: block;
   cursor: pointer;
   width: 135px;
   height: 45px;
@@ -8,16 +9,20 @@
   border-radius: 10px;
   text-decoration: none;
   transition: all 0.5s;
-  font-size: 28px;
+  font-size: 24px;
+  font-weight: 700;
   line-height: 48px;
   outline: none;
   border: none;
   &_big {
+    margin: 0 auto;
     width: 320px;
     height: 70px;
-    text-transform: uppercase;
     font-family: Philosopher;
     font-size: 28px;
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 72px;
     img {
       transform: rotate(180deg);
     }
