--- a/web/hicon/static/scss/blocks/_header.scss
+++ b/web/hicon/static/scss/blocks/_header.scss
@@ -1,13 +1,13 @@
 .header {
-  position: sticky;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
   height: 65px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 10px;
   background-color: $main-back;
-  font-family: 'Comfortaa';
-  font-weight: 400;
   &__up {
     cursor: pointer;
     &:hover {
