--- a/web/hicon/promo/templates/promo/promo.html
+++ b/web/hicon/promo/templates/promo/promo.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/swiper-bundle.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/style_promo.min.css' %}">
 {% endblock %}
 {% block content %}
 <section class="promo">
