--- a/web/hicon/static/css/style_promo.css
+++ b/web/hicon/static/css/style_promo.css
@@ -1,59 +1,3 @@
-/* @font-face {
-  font-family: 'Comfortaa';
-  src: local("Comfortaa-Light");
-  src: url("/static/fonts/Comfortaa-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Comfortaa';
-  src: local("Comfortaa-Regular");
-  src: url("/static/fonts/Comfortaa-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Comfortaa';
-  src: local("Comfortaa-SemiBold");
-  src: url("/static/fonts/Comfortaa-SemiBold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Comfortaa';
-  src: local("Comfortaa-Bold");
-  src: url("/static/fonts/Comfortaa-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Philosopher';
-  src: local("Philosopher-Regular");
-  src: url("/static/fonts/Philosopher-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Philosopher';
-  src: local("Philosopher-Bold");
-  src: url("/static/fonts/Philosopher-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Philosopher';
-  src: local("Philosopher-Italic");
-  src: url("/static/fonts/Philosopher-Italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
-}
- */
 @-webkit-keyframes up {
   0% {
     -webkit-transform: translateY(0px);
@@ -68,6 +12,7 @@
             transform: translateY(0px);
   }
 }
+
 @keyframes up {
   0% {
     -webkit-transform: translateY(0px);
@@ -218,10 +163,19 @@
           animation: down 1s linear infinite;
 }
 
+.btn_log, .btn_reg {
+  margin-top: 10px;
+  font-size: 28px;
+}
+
+.btn_reg {
+  width: 290px;
+}
+
 .btn:hover {
   color: #222;
-  -webkit-box-shadow: 0 0 10px 3px #D36E64;
-          box-shadow: 0 0 10px 3px #D36E64;
+  -webkit-box-shadow: 0 0 10px 5px #D36E64;
+          box-shadow: 0 0 10px 5px #D36E64;
 }
 
 .title {
@@ -264,6 +218,16 @@
   color: #3129D8;
   font-size: 28px;
   line-height: 28px;
+}
+
+.header__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__buttons .btn:nth-child(1) {
+  margin-right: 10px;
 }
 
 .promo {
@@ -314,17 +278,22 @@
   border-radius: 10px;
 }
 
-.promo__item:nth-child(1):hover img, .promo__item:nth-child(3):hover img {
+.promo__item:nth-child(1):hover .promo__icon {
   -webkit-animation: rise 1s linear;
           animation: rise 1s linear;
 }
 
-.promo__item:nth-child(2):hover img {
+.promo__item:nth-child(2):hover .promo__icon {
   -webkit-animation: time 3s linear;
           animation: time 3s linear;
 }
 
-.promo__item:nth-child(4):hover img {
+.promo__item:nth-child(3):hover .promo__icon {
+  -webkit-animation: rise 1s linear;
+          animation: rise 1s linear;
+}
+
+.promo__item:nth-child(4):hover .promo__icon {
   -webkit-animation: up 1s linear;
           animation: up 1s linear;
 }
@@ -413,6 +382,8 @@
   position: relative;
   top: 65px;
   padding: 30px 0;
+  background: #F8E5FF;
+  border-bottom: 2px solid #948BD8;
 }
 
 .function .swiper-container {
@@ -432,6 +403,126 @@
 .function .swiper-button-next, .function .swiper-button-prev {
   width: 40px;
   height: 46px;
+}
+
+.footer {
+  position: relative;
+  top: 65px;
+  height: 80px;
+  background: #D6C3F1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer .row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__social {
+  width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__link {
+  width: 45px;
+  height: 45px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #FF9A90;
+  -webkit-box-shadow: 0 0 10px 1px #3129D8;
+          box-shadow: 0 0 10px 1px #3129D8;
+}
+
+.footer__link:hover {
+  -webkit-animation: rise 1s linear infinite;
+          animation: rise 1s linear infinite;
+}
+
+.footer__descr {
+  font-family: Philosopher;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.footer__descr a {
+  font-family: Comfortaa;
+  font-weight: 400;
+  color: #3129D8;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+}
+
+.footer__descr a:hover {
+  text-shadow: 0px 0px 5px #3129D8;
+}
+
+.footer__author {
+  cursor: default;
+  font-size: 22px;
+  font-weight: 700;
+  text-decoration: underline;
+  text-shadow: 0px 0px 5px #3129D8;
+}
+
+@media (max-width: 991px) {
+  .footer {
+    height: 100%;
+    padding: 20px 0;
+  }
+  .footer .row > * {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 10px;
+  }
+  .footer .row > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer__descr {
+    text-align: center;
+    line-height: 22px;
+  }
+}
+
+@media (max-width: 575px) {
+  .btn {
+    width: 80px;
+  }
+  .btn_big {
+    width: 280px;
+  }
+  .btn_big:hover img {
+    -webkit-animation: none;
+            animation: none;
+  }
+  .btn:hover {
+    color: #222;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -507,4 +598,4 @@
     top: 10px;
   }
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style_promo.css.map */
