--- a/web/hicon/promo/templates/layout.html
+++ b/web/hicon/promo/templates/layout.html
@@ -63,39 +63,43 @@
 </head>
 <body>
   <div id="up"></div>
-  <header class="header">
-    <a href="#up" class="header__up"><img src="{% static 'icons/arrow.svg' %}" alt="arrow_up"></a>
-    <div class="header__logo">hicon</div>
-    <div class="header__buttons">
-      <a href="{% url 'reg' %}" class="btn">Рег</a>
-      <a href="{% url 'log' %}" class="btn">Вход</a>
-    </div>
-  </header>
+  {% block header %}
+    <header class="header">
+      <a href="#up" class="header__up"><img src="{% static 'icons/arrow.svg' %}" alt="arrow_up"></a>
+      <div class="header__logo">hicon</div>
+      <div class="header__buttons">
+        <a href="{% url 'reg' %}" class="btn">Рег</a>
+        <a href="{% url 'log' %}" class="btn">Вход</a>
+      </div>
+    </header>
+  {% endblock %}
   {% block content %}
   {% endblock %}
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3">
-          <div class="footer__social">
-            <a href="https://vk.com/visoyn/" class="footer__link" target="_blank"><img src="{% static 'icons/social/vk.svg' %}" alt="vk"></a>
-            <a href="https://www.instagram.com/visoyn" class="footer__link" target="_blank"><img src="{% static 'icons/social/inst.svg' %}" alt="inst"></a>
-            <a href="https://github.com/br-prog" class="footer__link" target="_blank"><img src="{% static 'icons/social/github.svg' %}" alt="github"></a>
+  {% block footer %}
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="footer__social">
+              <a href="https://vk.com/visoyn/" class="footer__link" target="_blank"><img src="{% static 'icons/social/vk.svg' %}" alt="vk"></a>
+              <a href="https://www.instagram.com/visoyn" class="footer__link" target="_blank"><img src="{% static 'icons/social/inst.svg' %}" alt="inst"></a>
+              <a href="https://github.com/br-prog" class="footer__link" target="_blank"><img src="{% static 'icons/social/github.svg' %}" alt="github"></a>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="footer__descr">
-            скорей подключайся к <a href="{% url 'reg' %}">hicon</a> и делай домашку эффективнее
+          <div class="col-lg-6">
+            <div class="footer__descr">
+              скорей подключайся к <a href="{% url 'reg' %}">hicon</a> и делай домашку эффективнее
+            </div>
           </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="footer__author">
-            begenFys
+          <div class="col-lg-3">
+            <div class="footer__author">
+              begenFys
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  {% endblock %}
   {% block javascript %}
   {% endblock %}
 </body>
