--- a/web/hicon/static/css/style_account.css
+++ b/web/hicon/static/css/style_account.css
@@ -52,6 +52,10 @@
   width: 290px;
 }
 
+.btn_modal {
+  width: 165px;
+}
+
 .btn:hover {
   color: #222;
   -webkit-box-shadow: 0 0 10px 5px #D36E64;
@@ -78,9 +82,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0 10px;
   background-color: #D6C3F1;
 }
@@ -92,6 +96,11 @@
 .header__up:hover {
   -webkit-animation: up 1s linear;
           animation: up 1s linear;
+}
+
+.header__up_auth {
+  position: absolute;
+  left: 10px;
 }
 
 .header__logo {
@@ -108,6 +117,155 @@
 
 .header__buttons .btn:nth-child(1) {
   margin-right: 10px;
+}
+
+.header_links {
+  width: 100%;
+  text-align: center;
+}
+
+.header__link {
+  color: #222;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.header__link:nth-child(2) {
+  margin: 0 10px;
+  color: #3129D8;
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.header__link:nth-child(2):hover {
+  color: #3129D8;
+}
+
+.header__link:hover {
+  color: #222;
+}
+
+.account {
+  position: relative;
+  top: 65px;
+  padding: 15px;
+}
+
+.account__wrapper {
+  margin: 0 auto;
+  background-color: #F8E5FF;
+  border-radius: 10px;
+  padding: 10px;
+  width: 30%;
+}
+
+.account__name {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  color: #3129D8;
+}
+
+.account__email {
+  font-size: 20px;
+  font-weight: 700;
+  color: #222;
+  text-align: center;
+}
+
+.account__exit {
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.account .overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.56);
+  z-index: 1000;
+}
+
+.account .overlay .modal {
+  border-radius: 10px;
+  padding: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #D6C3F1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0px 0px 20px 1px #fff;
+          box-shadow: 0px 0px 20px 1px #fff;
+}
+
+.account .overlay .modal__title {
+  font-size: 28px;
+  color: #3129D8;
+  margin-bottom: 15px;
+}
+
+.account .overlay .modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.account .overlay .modal__form input {
+  margin-bottom: 15px;
+  padding: 10px 5px 8px 10px;
+  border-radius: 10px;
+  border: 1px solid #222;
+  width: 100%;
+}
+
+@-webkit-keyframes rise {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes rise {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 
 .footer {
@@ -227,6 +385,48 @@
     color: #222;
     -webkit-box-shadow: none;
             box-shadow: none;
+  }
+  .btn_modal {
+    width: 165px;
+  }
+  .header {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .header__up_auth {
+    left: 5px;
+  }
+  .header__link {
+    font-size: 20px;
+  }
+  .header__link:nth-child(2) {
+    font-size: 22px;
+    margin: 0;
+  }
+}
+
+@media (max-width: 1200px) {
+  .account__wrapper {
+    width: 50%;
+  }
+}
+
+@media (max-width: 991px) {
+  .account__wrapper {
+    width: 70%;
+  }
+}
+
+@media (max-width: 575px) {
+  .account__wrapper {
+    width: 100%;
+  }
+  .account .overlay .modal {
+    width: 100%;
+  }
+  .account .overlay .modal__title {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=style_account.css.map */
