--- a/web/hicon/static/scss/blocks/general/_header.scss
+++ b/web/hicon/static/scss/blocks/general/_header.scss
@@ -5,7 +5,7 @@
   height: 65px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 10px;
   background-color: $main-back;
   &__up {
@@ -13,8 +13,11 @@
     &:hover {
       animation: up 1s linear;
     }
+    &_auth {
+      position: absolute;
+      left: 10px;
+    }
   }
-
   &__logo {
     color: $second-text;
     font-size: 28px;
@@ -24,6 +27,28 @@
     display: flex;
     .btn:nth-child(1) {
       margin-right: 10px;
+    }
+  }
+  &_links {
+    width: 100%;
+    text-align: center;
+  }
+  &__link {
+    color: $main-text;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 24px;
+    &:nth-child(2){
+      margin: 0 10px;
+      color: $second-text;
+      font-size: 28px;
+      font-weight: 400;
+      &:hover {
+        color: $second-text;
+      }
+    }
+    &:hover {
+      color: $main-text
     }
   }
 }
