--- a/web/hicon/static/scss/style_account.scss
+++ b/web/hicon/static/scss/style_account.scss
@@ -10,6 +10,7 @@
 @import 'blocks/general/title';
 
 @import 'blocks/general/header';
+@import 'blocks/account/account';
 @import 'blocks/general/footer';
 
 @import 'base/media_general';
