clean files and add styles for homework

--- a/web/hicon/account/templates/account/account.html
+++ b/web/hicon/account/templates/account/account.html
@@ -22,7 +22,7 @@
       <div class="account__email">
         {{ acc.email }}
       </div>
-      <a href="{% url 'exit' %}" class="btn account__exit">Выход</a>
+      <a href="{% url 'exit' %}" class="btn btn_exit">Выход</a>
     </div>
   </section>
 {% endblock %}
