--- a/web/hicon/homework/templates/homework/homework.html
+++ b/web/hicon/homework/templates/homework/homework.html
@@ -6,6 +6,10 @@
 
 {% block content %}
   <section class="homework">
-
+    <div class="homework__wrapper">
+      <a class="homework__item">
+        apodfiasodfijsadof
+      </a>
+    </div>
   </section>
 {% endblock %}
