--- a/web/hicon/promo/templates/promo/promo.html
+++ b/web/hicon/promo/templates/promo/promo.html
@@ -101,6 +101,7 @@
 {% endblock %}
 
 {% block javascript %}
-<script src="{% static 'js/swiper-bundle.min.js' %}"></script>
-<script src="{% static 'js/script.js' %}"></script>
+  <script src="{% static 'js/swiper-bundle.min.js' %}"></script>
+  <script src="{% static 'js/links.js' %}"></script>
+  <script src="{% static 'js/slider.js' %}"></script>
 {% endblock %}
