--- a/web/hicon/promo/templates/layout.html
+++ b/web/hicon/promo/templates/layout.html
@@ -35,30 +35,6 @@
       font-weight: 700;
       font-style: normal;
     }
-
-    @font-face {
-      font-family: 'Philosopher';
-      src: local("Philosopher-Regular");
-      src: url("{% static 'fonts/Philosopher-Regular.ttf' %}") format("truetype");
-      font-weight: 400;
-      font-style: normal;
-    }
-
-    @font-face {
-      font-family: 'Philosopher';
-      src: local("Philosopher-Bold");
-      src: url("{% static 'fonts/Philosopher-Bold.ttf' %}") format("truetype");
-      font-weight: 700;
-      font-style: normal;
-    }
-
-    @font-face {
-      font-family: 'Philosopher';
-      src: local("Philosopher-Italic");
-      src: url("{% static 'fonts/Philosopher-Italic.ttf' %}") format("truetype");
-      font-weight: 400;
-      font-style: italic;
-    }
   </style>
 </head>
 <body>
@@ -66,7 +42,7 @@
   {% block header %}
     <header class="header">
       <a href="#up" class="header__up"><img src="{% static 'icons/arrow.svg' %}" alt="arrow_up"></a>
-      <div class="header__logo">hicon</div>
+      <a href="{% url 'promo' %}" class="header__logo">hicon</a>
       <div class="header__buttons">
         <a href="{% url 'reg' %}" class="btn">Рег</a>
         <a href="{% url 'log' %}" class="btn">Вход</a>
