--- a/web/hicon/static/css/style_complete.css
+++ b/web/hicon/static/css/style_complete.css
@@ -76,6 +76,10 @@
   color: #009A4D;
 }
 
+.btn_no {
+  margin-bottom: 15px;
+}
+
 .btn:hover {
   color: #222;
   -webkit-box-shadow: 0 0 10px 5px #D36E64;
@@ -168,183 +172,21 @@
           justify-content: center;
 }
 
-.account {
+.complete {
   position: relative;
   top: 65px;
-  padding: 15px;
 }
 
-.account .header {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.account__wrapper {
-  margin: 0 auto;
-  background-color: #F8E5FF;
-  border-radius: 10px;
-  padding: 10px;
-  width: 30%;
-}
-
-.account__name {
-  text-align: center;
-  font-size: 24px;
-  font-weight: 700;
-  color: #3129D8;
-}
-
-.account__email {
-  font-size: 20px;
-  font-weight: 700;
-  color: #222;
-  text-align: center;
-}
-
-.account .overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.56);
-  z-index: 1000;
-}
-
-.account .overlay .modal {
-  border-radius: 10px;
-  padding: 15px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background-color: #D6C3F1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0px 0px 20px 1px #fff;
-          box-shadow: 0px 0px 20px 1px #fff;
-}
-
-.account .overlay .modal__title {
+.complete__title {
+  margin-bottom: 8px;
   font-size: 28px;
-  color: #3129D8;
-  margin-bottom: 15px;
-}
-
-.account .overlay .modal__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.account .overlay .modal__form input {
-  margin-bottom: 15px;
-  padding: 10px 5px 8px 10px;
-  border-radius: 10px;
-  border: 1px solid #222;
-  width: 100%;
-}
-
-.list {
-  position: relative;
-  top: 65px;
-}
-
-.list__wrapper {
-  width: 50%;
-  margin: 0 auto;
-  padding: 15px;
-  background-color: #F8E5FF;
-  border-radius: 10px;
-}
-
-.list__title {
-  text-align: center;
-  font-size: 24px;
   font-weight: 700;
-  color: #3129D8;
-}
-
-.list__item {
-  margin-top: 15px;
-}
-
-.list__subj {
-  text-align: center;
-  font-size: 26px;
-  color: #3129D8;
-}
-
-.list__full {
-  margin-bottom: 15px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 2px solid #FF9A90;
-  padding: 5px;
-}
-
-.list__text {
-  margin-bottom: 0;
-  font-size: 20px;
-}
-
-.list__date {
   color: red;
 }
 
-.list__check {
-  margin-right: 5px;
-  width: 25px;
-  height: 25px;
-}
-
-.list .overlay {
-  display: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.56);
-  z-index: 1000;
-}
-
-.list .overlay .modal {
-  border-radius: 10px;
+.complete__form {
   padding: 15px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background-color: #D6C3F1;
+  background-color: #F8E5FF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -355,36 +197,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 0px 0px 20px 1px #fff;
-          box-shadow: 0px 0px 20px 1px #fff;
-}
-
-.list .overlay .modal__close {
-  cursor: pointer;
-  font-size: 40px;
-  color: #3129D8;
-}
-
-.list .overlay .modal__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.list .overlay .modal__form input, .list .overlay .modal__form select {
-  margin-bottom: 15px;
-  padding: 10px 5px 8px 10px;
-  border-radius: 10px;
-  border: 1px solid #222;
-  width: 100%;
-  font-size: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @-webkit-keyframes rise {
@@ -564,47 +379,14 @@
   }
 }
 
-@media (max-width: 1200px) {
-  .account__wrapper {
-    width: 50%;
-  }
-  .list__wrapper {
-    width: 60%;
-  }
-}
-
-@media (max-width: 991px) {
-  .account__wrapper {
-    width: 70%;
-  }
-  .list__wrapper {
-    width: 80%;
-  }
-}
-
-@media (max-width: 767px) {
-  .list .overlay .modal {
-    width: 100%;
-  }
-}
-
 @media (max-width: 575px) {
   .header {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
   }
-  .account__wrapper {
-    width: 100%;
-  }
-  .list__wrapper {
-    width: 100%;
-  }
-  .list__hw, .list__date {
-    font-size: 16px;
-  }
-  .list__item {
-    margin-top: 15px;
+  .complete__title {
+    font-size: 20px;
   }
 }
-/*# sourceMappingURL=style_account.css.map */
+/*# sourceMappingURL=style_complete.css.map */
