--- a/web/hicon/account/templates/account/account.html
+++ b/web/hicon/account/templates/account/account.html
@@ -53,7 +53,10 @@
                   {% for hw, date, ind in hws %}
                     <div class="col-12 list__col">
                         <div class="list__full">
-                          <a href="{% url 'complete' pk=id index=ind %}"><img src="{% static 'icons/check.svg' %}" class="list__check" alt="check"></a>
+                          <div class="list__btns">
+                            <a href="{% url 'complete' pk=id index=ind %}"><img src="{% static 'icons/check.svg' %}" class="list__img" alt="check"></a>
+                            <a href="{% url 'change' pk=id index=ind %}"><img src="{% static 'icons/cog.svg' %}" class="list__img" alt="check"></a>
+                          </div>
                           <p class="list__text"><span class="list__hw">{{ hw }}</span> - <span class="list__date">{{ date }}</span></p>
                         </div>
                     </div>
