--- a/web/hicon/static/css/style_account.css
+++ b/web/hicon/static/css/style_account.css
@@ -76,6 +76,10 @@
   color: #009A4D;
 }
 
+.btn_no {
+  margin-bottom: 15px;
+}
+
 .btn:hover {
   color: #222;
   -webkit-box-shadow: 0 0 10px 5px #D36E64;
@@ -291,6 +295,10 @@
   color: #3129D8;
 }
 
+.list__btns {
+  margin-bottom: 5px;
+}
+
 .list__full {
   margin-bottom: 15px;
   text-align: center;
@@ -320,10 +328,10 @@
   color: red;
 }
 
-.list__check {
+.list__img {
   margin-right: 5px;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
 }
 
 .list .overlay {
